# fastapi_sqlalchemy

./: .gitignore  README.md  database.py  main.py  models.py  pyproject.toml  todos.db
routers/: auth.py  todos.py
